--- a/predictor/templates/form.html
+++ b/predictor/templates/form.html
@@ -56,10 +56,13 @@
                 
                 <!-- Submit button with more appealing styling -->
                 <div class="text-center">
-                    <button type="submit" class="btn btn-lg btn-primary w-100 mt-4">Submit</button>
+                    <a href="{% url 'result' %}" class="btn btn-lg btn-success w-100 mt-2">Submit</a>
+                    <a href="{% url 'home' %}" class="btn btn-lg btn-secondary w-100 mt-2">Back to Home</a>
                 </div>
             </form>
         </div>
     </div>
 </div>
 {% endblock %}
+
+
